# celestialflow-web

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.agents/skills/docs-zh-sync/: SKILL.md  _subagent-base.md  subagent-runtime.md  subagent-server-routes.md  subagent-static-css.md  subagent-static-ts-template.md  subagent-tests.md
docs/zh-CN/src/: __init__.md  core_server.md  util_cal.md  util_config.md  util_error.md  util_models.md
docs/zh-CN/src/routes/: __init__.md  core_pull.md  core_push.md  pull_routes.md  push_routes.md
docs/zh-CN/src/runtime/: __init__.md  util_cal.md  util_config.md  util_error.md  util_errors.md  util_models.md  util_sqlite.md
docs/zh-CN/src/server/: __init__.md  core_server.md
docs/zh-CN/src/static/css/: _colors.md  base.md  dashboard.md  dashboard_analysis.md  dashboard_error_types.md  dashboard_history.md  dashboard_statuses.md  dashboard_structure.md  dashboard_summary.md  errors.md  injection_editor.md  injection_layout.md  injection_nodes.md  injection_preview.md
docs/zh-CN/src/static/ts/: dashboard_analysis.md  dashboard_error_types.md  dashboard_history.md  dashboard_statuses.md  dashboard_structure.md  dashboard_summary.md  errors.md  globals.d.md  i18n.md  injection.md  layout_editor.md  main.md  utils.md  web_config.md
docs/zh-CN/src/templates/: index.md
docs/zh-CN/tests/: __init__.md  conftest.md  test_server.md
src/celestialflow-web/: __init__.py  config.json  core_server.py  package-lock.json  package.json  tsconfig.json  util_cal.py  util_config.py  util_error.py  util_sqlite.py
src/celestialflow-web/routes/: __init__.py  pull_routes.py  push_routes.py
src/celestialflow-web/static/css/: base.css  dashboard_error_types.css  dashboard_statuses.css  dashboard_structure.css  errors.css  injection_editor.css  injection_nodes.css
src/celestialflow-web/static/js/: dashboard_history.js  dashboard_structure.js  errors.js  i18n.js  injection.js  utils.js  web_config.js
src/celestialflow-web/static/ts/: dashboard_analysis.ts  dashboard_error_types.ts  dashboard_statuses.ts  dashboard_structure.ts  injection.ts  main.ts
src/celestialflow-web/templates/: index.html
src/celestialflow_web/: __init__.py
src/celestialflow_web/routes/: __init__.py  core_pull.py  core_push.py  pull_routes.py
src/celestialflow_web/runtime/: __init__.py  util_cal.py  util_config.py  util_error.py  util_errors.py  util_models.py  util_sqlite.py
src/celestialflow_web/server/: __init__.py  core_server.py
src/celestialflow_web/static/css/: _colors.css  dashboard.css  dashboard_analysis.css  dashboard_history.css  dashboard_summary.css  injection_layout.css  injection_preview.css
src/celestialflow_web/static/js/: dashboard_analysis.js  dashboard_error_types.js  dashboard_statuses.js  dashboard_summary.js  layout_editor.js  main.js
src/celestialflow_web/static/ts/: dashboard_history.ts  dashboard_summary.ts  errors.ts  globals.d.ts  i18n.ts  layout_editor.ts  utils.ts  web_config.ts
tests/: conftest.py  test_server.py
