[project]
name = "celestialflow-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.51.0",
]

[project.scripts]
celestialflow-web = "celestialflow-web.core_server:main_entry"

[tool.setuptools]
license-files = []

[tool.setuptools.package-data]
celestialflow = [
    "templates/**/*.html",
    "static/**/*",
    "config.json"
]