[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celestialflow-web"
version = "0.1.0"
description = "CelestialFlow Web UI for task graph monitoring and control."
readme = "README.md"
license-files = []
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "pydantic>=2.0.0",
    "uvicorn>=0.51.0",
]

[project.scripts]
celestialflow-web = "celestialflow_web.server.core_server:main_entry"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "httpx2>=0.28.1",
    "twine>=6.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.15.0",
    "pyright>=1.1.409",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
celestialflow_web = [
    "templates/**/*.html",
    "static/**/*",
    "config.json"
]

[tool.pyright]
include = ["src"]
exclude = ["tests"]

typeCheckingMode = "strict"
reportUnusedFunction = "none"
reportImplicitOverride = "none"

[tool.ruff]
target-version = "py312"
exclude = ["tests"]

[tool.ruff.lint]
select = [
    "E", "F",      # pycodestyle errors + pyflakes
    "I",           # isort (import order)
    "UP",          # pyupgrade
    "B",           # flake8-bugbear
    "SIM",         # flake8-simplify
    "C4",          # flake8-comprehensions
    "RUF",         # ruff-specific rules
]
ignore = [
    "E501",        # line too long（交给 formatter）
    "RUF001",      # 字符串内 Unicode 字符（中文内容）
    "RUF002",      # 中文标点（项目使用中文 docstring）
    "RUF003",      # 中文注释标点
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["celestialflow_web"]
